--- a/applink.html
+++ b/applink.html
@@ -2,7 +2,7 @@
 permalink: /applink/
 layout: empty
 search_exclude: true
-title: Get GoGorilla Forms
+title: Get Rilla Forms
 ---
 <style type="text/css">
     * {
@@ -207,13 +207,13 @@ title: Get GoGorilla Forms
                     <img src="{{ site.baseurl }}/assets/logo.svg" alt="logo">
                 </div>
                 <div class="header__title">
-                    Install GoGorilla Forms
+                    Install Rilla Forms
                 </div>
                 <div class="header__desc">
-                    To use GoGorilla Forms, first install the mobile application by clicking the link below or following the instructions.
+                    To use Rilla Forms, first install the mobile application by clicking the link below or following the instructions.
                 </div>
                 <div class="header__desc-title">
-                    Download GoGorilla Forms
+                    Download Rilla Forms
                 </div>
                 <div id="iOS-button" class="button__store">
                     <a href="https://apps.apple.com/us/app/cybertracker/id1524186167"><img src="{{ site.baseurl }}/assets/button-app-store.png" alt="App Store" style="width:100%"></a>
@@ -225,12 +225,12 @@ title: Get GoGorilla Forms
                     Steps:
                     <div class="header__steps-text">
                         <ol>
-                            <li>Install GoGorilla Forms using the button above</li>
+                            <li>Install Rilla Forms using the button above</li>
                             <li>Click the link which opened this page</li>
                             <li>Launch project</li>
                         </ol>
                     </div>
-                    More on the <a href="https://gogorillaforms.com">GoGorilla Forms documentation</a>.
+                    More on the <a href="https://rillaforms.com">Rilla Forms documentation</a>.
                 </div>
             </div>
         </header>
