--- a/auth.html
+++ b/auth.html
@@ -9,7 +9,7 @@ search_exclude: true
         let url = new URL(window.location.href);
         let code = url.searchParams.get("code");
         if (code !== "") {
-            window.location.href = "https://gogorillaforms.com/applink/?auth=" + code;
+            window.location.href = "https://rillaforms.com/applink/?auth=" + code;
         }
     </script>
 </body>
